Resolves: tdf#127953 destroy shape before model

Change-Id: I27bf76d8f7e196db57fa56181e06e578915b980d
Reviewed-on: https://gerrit.libreoffice.org/80148
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>